Replacing usages of `.collect(Collectors.toList())` with `.toList()`