@@ -54,9 +54,11 @@ public class GitRepoToDtoConverter implements Converter<GitRepo, GitRepoDto> {
                 .blankLines(hasMetrics ? totalMetrics.getBlankLines() : null)
                 .commentLines(hasMetrics ? totalMetrics.getCommentLines() : null)
                 .codeLines(hasMetrics ? totalMetrics.getCodeLines() : null)
-                .metrics(source.getMetrics().stream()
-                    .map(metricConverter::convert)
-                    .collect(Collectors.toList()))
+                .metrics(
+                        source.getMetrics().stream()
+                                .map(metricConverter::convert)
+                                .toList()
+                )
                 .hasWiki(source.getHasWiki())
                 .isArchived(source.getIsArchived())
                 .languages(
